--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,13 @@ pyqtwebengine = "*"
 pyqt5-stubs = "*"
 pyvis = "*"
 numpy = "*"
+pandas-stubs = "*"
 
 [dev-packages]
 pytest = "*"
+mypy = "*"
+flake8 = "*"
+black = "*"
 
 [requires]
 python_version = "3.10"
